Add Gpu blacklist entry for video encoding on Linux.

On Linux, Video encoding is currently erroneously reported on chrome://gpu as "Hardware
accelerated". This CL fixes this by adding a blacklist entry.

BUG=641485
TEST=Open chrome://gpu on Linux and check that Video Encode is reported as
     Software only, hardware acceleration unavailable
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2744683002
Cr-Commit-Position: refs/heads/master@{#456153}

Former-commit-id: 31ec638091fc05bd13c41f8cd19cae7479cd5a1c